[package]
name = "skolemrs"
version = "0.1.0"
authors = ["philippeitis <33013301+philippeitis@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
permutohedron = "0.2.4"

